--- a/index.html
+++ b/index.html
@@ -1,1 +1,205 @@
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>就職活動メモ</title>
+</head>
+<body>
+<h2>就職活動　メモ</h2>
+<br>
+<h3>動いている企業</h3>
+<table>
+<body>
+<table border="1">
+<tr>
+<td><center>優先順位</center></td>
+<td><center>企業名</center></td>
+<td><center>求人サイト名</center></td>
+<td><center>メモ1</center></td>
+<td><center>メモ2</center></td>
+</tr>
+<tr>
+<td width="100"><center>1</center></td>
+<td width="240"><center>財務省</center></a></td>
+<td width="140"><center>イントラ求人</center></td>
+<td width="280"><center>書類郵送済み</center></td>
+<td wrdth<"20"><center></center></td>
+</tr>
+<tr>
+<td><center>2</center></td>
+<td><center>桐和会グループ</center></td>
+<td><center>イントラ求人</center></td>
+<td><center>志望動機作成中</center></td>
+<td><center></center></td>
+</tr>
+<tr>
+<td><center>3</center></td>
+<td><center>株式会社ニチイ学館 柏支店<br>（柏市立柏病院）</center></td>
+<td><center>ハローワーク求人</center></td>
+<td><center>書類郵送済み</center></td>
+<td><center></center></td>
+</tr>
+<td><center>4</center></td>
+<td><center>SMBC日興証券株式会社 </center></td>
+<td><center>クローバーナビ</center></td>
+<td><center>応募フォーム送信済み</center></td>
+<td width="270"><center></center></td>
+</tr>
+<tr>
+<td><center>5</center></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td><center>6</center></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</table>
+<h3>その他動いているところ</h3>
+<table>
+<body>
+<table border="1">
+<tr>
+<td><center>番号</center></td>
+<td><center>企業名</center></td>
+<td><center>メモ1</center></td>
+</tr>
+<tr>
+<td><center>1</center></td>
+<td>チャレンジドオフィスかしわ</td>
+<td>合格だが順番待ち</td>
+</tr>
+</table>
+<h3>終わった企業</h3>
+<table>
+<body>
+<table border="1">
+<tr>
+<td><center>企業名</center></td>
+<td><center>求人サイト名</center></td>
+</tr>
+  <tr>
+   <td><center>株式会社リクルートオフィスサポート</center></td>
+    <td><center>クローバーナビ</center></td>
+  </tr> 
+  <tr>
+    <td><center>トランスコスモス株式会社</center></td>
+    <td><center>クローバーナビ</center></td>
+  </tr>
+  <tr>
+    <td><center>株式会社　ゾフ</center></td>
+    <td><center>イントラ求人</center></td>
+  </tr>
+  <tr>
+    <td><center>株式会社　ジェイコムハート</center></td>
+    <td><center>イントラ求人</center></td>
+  </tr>
+  <tr>
+    <td><center>オリエンタルモーター　株式会社</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+    <tr>
+      <td><center>高田製薬株式会社</center></td>
+      <td><center>ハローワーク求人</center></td>
+    </tr>
+    <tr>
+      <td><center>富士ソフト企画　株式会社</center></td>
+      <td><center>ハローワーク求人</center></td>
+    </tr>
+    <tr>
+      <td><center>あいおいニッセイ同和損害保険株式会社</center></td>
+      <td><center>ハローワーク求人</center></td>
+    </tr>
+  <tr>
+    <td><center>旭情報サービス　株式会社</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+  <tr>
+    <td><center>株式会社　長谷工システムズ</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+  <tr>
+    <td><center>日本年金機構　千代田年金事務所</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+<tr>
+<td><center>ポラスシェアード　株式会社</center></a></td>
+<td><center>イントラ求人</center></td>
+</tr>
+  <tr>
+    <td><center>エイブリック株式会社</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+  <tr>
+    <td><center>株式会社ＤＴＳパレット</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+  <tr>
+  <td><center>川口信用金庫</center></td>
+  <td><center>ハローワーク求人</center></td>
+  <tr>
+    <td><center>フコク情報システム　株式会社</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+<tr>
+<td width="350"><center><a href="https://www.smbc-green.co.jp/recruit/faq.html">SMBCグリーンサービス株式会社</center></a></td>
+<td width="140"><center>ハローワーク求人</center></td>
+</tr>
+<tr>
+<td><center><a href="https://www.bell24.co.jp/ja/">株式会社ベルシステム24</center></a></td>
+<td><center>イントラ求人</center></td>
+</tr>
+  <tr>
+    <td><center>明治安田生命保険　相互会社</center></td>
+    <td><center>ハローワーク求人</center></td>
+  </tr>
+<tr>
+<td><center>大樹生命保険株式会社</center></a></td>
+<td><center>ハローワーク求人</center></td>
+</tr>
+<tr>
+<td><center><a href="https://www2.deloitte.com/jp/ja/pages/about-deloitte/articles/chlg/tohmatsu-challenged.html">トーマツチャレンジド株式会社</center></a></td>
+<td><center>イントラ求人</center></td>
+</tr>
+<tr>
+<td><center><a href="https://recruit.openhouse-group.com/career_specialist/diversity/">株式会社オープンハウス</center></td>
+  <td><center>イントラ求人</center></td>
+</tr>
+</table>
+<h3>辞めた企業</h3>
+<table>
+<body>
+<table border="1">
+<tr>
+<td><center>企業名</center></td>
+<td><center>求人サイト名</center></td>
+</tr>
+<tr>
+<td width="250"><center>パーソルチャレンジ株式会社</center></td>
+<td><center>イントラ求人</center></td>
+</tr>
+<tr>
+<td><center><a href="http://www.telecomedia.co.jp/">株式会社テレコメディア</center></a></td>
+<td><center>イントラ求人</center></td>
+</tr>
+<tr>
+<td><center></center></td>
+<td><center></center></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+</table>
+</body>
+</html>
 
