--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 <td><center>求人サイト名</center></td>
 </tr>
   <tr>
-   <td><center>株式会社リクルートオフィスサポート</center></td>
+   <td><center></center></td>
     <td><center>クローバーナビ</center></td>
   </tr> 
   <tr>
-    <td><center>トランスコスモス株式会社</center></td>
+    <td><center></center></td>
     <td><center>クローバーナビ</center></td>
   </tr>
   <tr>
-    <td><center>株式会社　ゾフ</center></td>
+    <td><center></center></td>
     <td><center>イントラ求人</center></td>
   </tr>
   <tr>
