--- a/index.html
+++ b/index.html
@@ -14,40 +14,35 @@
 <tr>
 <td><center>番号</center></td>
 <td><center>企業名</center></td>
-<td><center>求人サイト名</center></td>
 <td><center>メモ1</center></td>
 <td><center>メモ2</center></td>
 </tr>
 <tr>
 <td width="100"><center>1</center></td>
 <td width="240"><center>財務省</center></a></td>
-<td width="140"><center>イントラ求人</center></td>
 <td width="280"><center>書類郵送済み</center></td>
 <td wrdth<"20"><center></center></td>
 </tr>
 <tr>
 <td><center>2</center></td>
 <td><center>桐和会グループ</center></td>
-<td><center>イントラ求人</center></td>
 <td><center>志望動機作成中</center></td>
 <td><center></center></td>
 </tr>
 <tr>
 <td><center>3</center></td>
 <td><center>株式会社ニチイ学館 柏支店<br>（柏市立柏病院）</center></td>
-<td><center>ハローワーク求人</center></td>
 <td><center>書類郵送済み</center></td>
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
 <td><center>SMBC日興証券株式会社 </center></td>
-<td><center>クローバーナビ</center></td>
 <td><center>応募フォーム送信済み</center></td>
 <td width="270"><center></center></td>
 </tr>
 <tr>
 <td><center>5</center></td>
-<td></td>
+<td>イオンモール株式会社</td>
 <td></td>
 <td></td>
 <td></td>
