--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
-<td><center>SMBC日興証券株式会社 </center></td>
-<td><center>応募フォーム送信済み</center></td>
+<td><center>大和ハウス工業株式会社</center></td>
+<td><center></center></td>
 <td width="270"><center></center></td>
 </tr>
 <tr>
