--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 </tr>
 <tr>
 <td><center>3</center></td>
-<td><center>株式会社ニチイ学館 柏支店<br>（柏市立柏病院）</center></td>
-<td><center>書類郵送済み</center></td>
+<td><center>ポラス 株式会社<br>(ポラスグループ)</center></td>
+<td><center></center></td>
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
-<td><center>大和ハウス工業株式会社</center></td>
+<td><center>株式会社　大塚商会</center></td>
 <td><center></center></td>
 <td width="270"><center></center></td>
 </tr>
