--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </tr>
 <tr>
 <td><center>2</center></td>
-<td><center>桐和会グループ</center></td>
-<td><center>志望動機作成中</center></td>
+<td><center>大和ハウス工業株式会社</center></td>
+<td><center></center></td>
 <td><center></center></td>
 </tr>
 <tr>
