--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </tr>
 <tr>
 <td width="100"><center>1</center></td>
-<td width="240"><center>財務省</center></a></td>
-<td width="280"><center>書類郵送済み</center></td>
+<td width="240"><center>ANAウィングフェローズ・ヴイ王子 株式会社</center></a></td>
+<td width="280"><center>面接済</center></td>
 <td wrdth<"20"><center></center></td>
 </tr>
 <tr>
@@ -32,7 +32,7 @@
 <tr>
 <td><center>3</center></td>
 <td><center>ポラス 株式会社<br>(ポラスグループ)</center></td>
-<td><center></center></td>
+<td><center>面接済</center></td>
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
@@ -53,20 +53,20 @@
 <body>
 <table border="1">
 <tr>
+<td><center>番号</center></td>
 <td><center>企業名</center></td>
-<td><center>求人サイト名</center></td>
 </tr>
   <tr>
    <td><center></center></td>
-    <td><center>クローバーナビ</center></td>
+    <td><center></center></td>
   </tr> 
   <tr>
     <td><center></center></td>
-    <td><center>クローバーナビ</center></td>
+    <td><center></center></td>
   </tr>
 <tr>
-<td width="350"><center><a href="https://www.smbc-green.co.jp/recruit/faq.html">SMBCグリーンサービス株式会社</center></a></td>
-<td width="140"><center>ハローワーク求人</center></td>
+<td width="100"><center>1</center></td>
+<td width="240"><center></center></td>
 </tr>
 
 </table>
