--- a/index.html
+++ b/index.html
@@ -56,19 +56,14 @@
 <td><center>番号</center></td>
 <td><center>企業名</center></td>
 </tr>
-  <tr>
-   <td><center></center></td>
-    <td><center></center></td>
-  </tr> 
-  <tr>
-    <td><center></center></td>
-    <td><center></center></td>
-  </tr>
 <tr>
 <td width="100"><center>1</center></td>
 <td width="240"><center></center></td>
 </tr>
-
+<tr>
+  <td><center>2</center></td>
+  <td><center></center></td>
+</tr>
 </table>
 </body>
 </html>
