--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </tr>
 <tr>
 <td width="100"><center>1</center></td>
-<td width="240"><center></center></td>
+<td width="240"><center>ポラス 株式会社<br>(ポラスグループ)</center></td>
 </tr>
 <tr>
   <td><center>2</center></td>
