--- a/index_1.html
+++ b/index_1.html
@@ -1,2 +1,11 @@
 <html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initiale=1.0">
+<title>希望求人まとめ</title>
+</head>
+<body>
+<h2>希望求人まとめ</h2>
+<br>
+</body>
 </html>
