--- a/index_1.html
+++ b/index_1.html
@@ -7,5 +7,16 @@
 <body>
 <h2>希望求人まとめ</h2>
 <br>
+<table>
+<body>
+<table border="1">
+<tr>
+<td><center>番号</center></td>
+<td><center>企業名</center></td>
+<td><center>求人サイト名</center></td>
+<td><center>求人票</center></td>
+<td><center>メモ１</center></td>
+</tr>    
+</table>
 </body>
 </html>
