--- a/index_1.html
+++ b/index_1.html
@@ -16,7 +16,14 @@
 <td><center>求人サイト名</center></td>
 <td><center>求人票</center></td>
 <td><center>メモ１</center></td>
-</tr>    
+</tr>
+<tr>
+<td width="100"><center>1</center></td>
+<td width="240"><center>履歴書</center></td>
+<td width="140"><center>クローバーナビ</center></td>
+<td width="280><center><a href="https://github.com/miki0113/test_1/blob/1196be433e2361957ae1867b3c491fe0ad121fe5/clover_resume%202.pdf">ダウンロード</center></a></td>
+<td width="20><center></center></td>
+</tr>
 </table>
 </body>
 </html>
