--- a/index_1.html
+++ b/index_1.html
@@ -24,6 +24,13 @@
 <td width="280><center><a href="https://github.com/miki0113/test_1/blob/1196be433e2361957ae1867b3c491fe0ad121fe5/clover_resume%202.pdf">ダウンロード</center></a></td>
 <td width="20><center></center></td>
 </tr>
+<tr>
+<td><center>2</center></td>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
+</tr>
 </table>
 </body>
 </html>
