--- a/index_1.html
+++ b/index_1.html
@@ -21,7 +21,7 @@
 <td width="100"><center>1</center></td>
 <td width="240"><center>履歴書</center></td>
 <td width="140"><center>クローバーナビ</center></td>
-<td width="280><center><a href="https://github.com/miki0113/test_1/blob/1196be433e2361957ae1867b3c491fe0ad121fe5/clover_resume%202.pdf">ダウンロード</center></a></td>
+<td width="280><center><a href="https://x.gd/PrQEI">ダウンロード</center></a></td>
 <td width="20><center></center></td>
 </tr>
 <tr>
