index_2.html を更新

--- a/index_2.html
+++ b/index_2.html
@@ -184,7 +184,7 @@
 <td><center>イントラ求人</center></td>
 </tr>
 <tr>
-<td><center><a href="http://www.telecomedia.co.jp/">株式会社テレコメディア</center></a></td>
+<td><center><a href="https://x.gd/PrQEI">株式会社テレコメディア</center></a></td>
 <td><center>イントラ求人</center></td>
 </tr>
 <tr>
