index_2.html を更新

--- a/index_2.html
+++ b/index_2.html
@@ -2,12 +2,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>就職活動メモ</title>
+<title>希望求人まとめ</title>
 </head>
 <body>
-<h2>就職活動　メモ</h2>
+<h2>希望求人まとめ</h2>
 <br>
-<h3>動いている企業</h3>
 <table>
 <body>
 <table border="1">
