index_2.html を更新

--- a/index_2.html
+++ b/index_2.html
@@ -11,7 +11,7 @@
 <body>
 <table border="1">
 <tr>
-<td><center>優先順位</center></td>
+<td><center>番号</center></td>
 <td><center>企業名</center></td>
 <td><center>求人サイト名</center></td>
 <td><center>メモ1</center></td>
