index_2.html を更新

--- a/index_2.html
+++ b/index_2.html
@@ -15,12 +15,11 @@
 <td><center>企業名</center></td>
 <td><center>求人サイト名</center></td>
 <td><center>メモ1</center></td>
-<td><center>メモ2</center></td>
 </tr>
 <tr>
 <td width="100"><center>1</center></td>
-<td width="240"><center>財務省</center></a></td>
-<td width="140"><center>イントラ求人</center></td>
+<td width="240"><center>履歴書</center></a></td>
+<td width="140"><center>クローバーナビ</center></td>
 <td width="280"><center>書類郵送済み</center></td>
 <td wrdth<"20"><center></center></td>
 </tr>
