index_2.html を更新

--- a/index_2.html
+++ b/index_2.html
@@ -14,6 +14,7 @@
 <td><center>番号</center></td>
 <td><center>企業名</center></td>
 <td><center>求人サイト名</center></td>
+<td><center>求人表</center></td>
 <td><center>メモ1</center></td>
 </tr>
 <tr>
