index_2.html を更新

--- a/index_2.html
+++ b/index_2.html
@@ -21,27 +21,27 @@
 <td width="100"><center>1</center></td>
 <td width="240"><center>履歴書</center></a></td>
 <td width="140"><center>クローバーナビ</center></td>
-<td width="280"><center>書類郵送済み</center></td>
-<td wrdth<"20"><center></center></td>
+<td width="280><center><a href="https://x.gd/PrQEI">ダウンロード</center></a></td>
+<td wrdth="20"><center></center></td>
 </tr>
 <tr>
 <td><center>2</center></td>
-<td><center>桐和会グループ</center></td>
-<td><center>イントラ求人</center></td>
-<td><center>志望動機作成中</center></td>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
 <td><center></center></td>
 </tr>
 <tr>
 <td><center>3</center></td>
-<td><center>株式会社ニチイ学館 柏支店<br>（柏市立柏病院）</center></td>
-<td><center>ハローワーク求人</center></td>
-<td><center>書類郵送済み</center></td>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
 <td><center></center></td>
 </tr>
 <td><center>4</center></td>
-<td><center>SMBC日興証券株式会社 </center></td>
-<td><center>クローバーナビ</center></td>
-<td><center>応募フォーム送信済み</center></td>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
 <td width="270"><center></center></td>
 </tr>
 <tr>
@@ -68,18 +68,9 @@
 <table>
 <body>
 <table border="1">
-<tr>
-<td><center>企業名</center></td>
-<td><center>求人サイト名</center></td>
-</tr>
-<tr>
-<td width="250"><center>パーソルチャレンジ株式会社</center></td>
-<td><center>イントラ求人</center></td>
-</tr>
-<tr>
-<td><center><a href="https://x.gd/PrQEI">株式会社テレコメディア</center></a></td>
-<td><center>イントラ求人</center></td>
-</tr>
+
+
+
 <tr>
 <td><center></center></td>
 <td><center></center></td>
