index_2.html を更新

--- a/index_2.html
+++ b/index_2.html
@@ -21,7 +21,7 @@
 <td width="100"><center>1</center></td>
 <td width="240"><center>履歴書</center></a></td>
 <td width="140"><center>クローバーナビ</center></td>
-<td width="280><center><a href="https://x.gd/PrQEI">ダウンロード</center></a></td>
+<td width="280"><center><a href="https://x.gd/PrQEI">ダウンロード</center></a></td>
 <td wrdth="20"><center></center></td>
 </tr>
 <tr>
