--- a/index_2.html
+++ b/index_2.html
@@ -21,7 +21,7 @@
 <td width="100"><center>1</center></td>
 <td width="240"><center>履歴書</center></a></td>
 <td width="140"><center>クローバーナビ</center></td>
-<td width="280"><center><a href="https://x.gd/PrQEI" download>ダウンロード</center></a></td>
+<td width="280"><center><a href="https://11.gigafile.nu/0107-c1bfcc3660a3aa49b2ad184ad09d62f18">ダウンロード</center></a></td>
 <td wrdth="20"><center></center></td>
 </tr>
 <tr>
