--- a/index_2.html
+++ b/index_2.html
@@ -19,9 +19,9 @@
 </tr>
 <tr>
 <td width="100"><center>1</center></td>
-<td width="240"><center>履歴書</center></a></td>
+<td width="240"><center>株式会社ビューカード</center></a></td>
 <td width="140"><center>クローバーナビ</center></td>
-<td width="280"><center><a href="https://11.gigafile.nu/0107-c1bfcc3660a3aa49b2ad184ad09d62f18">ダウンロード</center></a></td>
+<td width="280"><center><a href="https://www.clover-navi.com/detail/employment/v/2/id/41868">表示</center></a></td>
 <td wrdth="20"><center></center></td>
 </tr>
 <tr>
