--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </tr>
 <tr>
   <td><center>2</center></td>
-  <td><center></center></td>
+  <td><center>ANAウィングフェローズ・ヴイ王子 株式会社</center></td>
 </tr>
 </table>
 </body>
